Corporate text & price changes

--- a/src/pug/arrive-and-drive/index.pug
+++ b/src/pug/arrive-and-drive/index.pug
@@ -4,7 +4,7 @@ block nav
   +navigation('/arrive-and-drive')
 
 block title
-  title  Arrive & Drive | Fast Lane Go Karting Stoke
+  title  Arrive & Drive Sessions | Fast Lane Go Karting Stoke
 
 block description
   meta(name="description" content="There's no need to book - our Arrive & Drive sessions allow you to hone your skills at any time. Call 01782 250 450 or email track@fastlanekarting.co.uk to book a go karting package. We're open from 10am until 10:30pm, 7 days a week.")
@@ -27,28 +27,28 @@ block content
               li
                 div
                   h3 20 lap practice
-                  p 20 Laps Non-Stop Race
+                  p 20 Laps Non-Stop Session
                 div
                   span £15/driver - 160CC
                   span £20/driver - 200CC
               li
                 div
                   h3 50 lap practice
-                  p 2 x 25 Lap (15 Minute) Races
+                  p 2 x 25 Lap (15 Minute) Sessions
                 div
                   span £25/driver - 160CC
                   span £30/driver - 200CC
               li
                 div
                   h3 75 lap practice
-                  p 3 x 25 Lap (15 Minute) Races
+                  p 3 x 25 Lap (15 Minute) Sessions
                 div
                   span £30/driver - 160CC
                   span £35/driver - 200CC
               li
                 div
                   h3 100 lap practice
-                  p 4 x 25 Lap (15 Minute) Races
+                  p 4 x 25 Lap (15 Minute) Sessions
                 div
                   span £35/driver - 160CC
                   span £40/driver - 200CC
