--- a/src/pug/corporate-events/index.pug
+++ b/src/pug/corporate-events/index.pug
@@ -4,7 +4,7 @@ block nav
   +navigation('/corporate-events')
 
 block title
-  title Corporate Event Packages | Fast Lane Go Karting Stoke
+  title Corporate Event Packages | Fast Lane Go-Karting Stoke
 
 block description
   meta(name="description" content="If you’re planning a Corporate Event or Team-Building activity, it can be hard to know what to do! At Fast Lane all of our Corporate Events are run on the 200cc karts so you know your Customer or Staff are getting the best. Call 01782 250 450 or email track@fastlanekarting.co.uk to book a corporate karting package.")
@@ -19,10 +19,10 @@ block content
 
     .container.race-packages__price-list
       .content-block
-        h2 Grand Prix Events
+        h2 Corporate Grand Prix Events
         .red-highlight
-        p This event is set for small to medium corporate groups intent on a good nights’ racing, and offers the ultimate karting experience. Groups will have exclusive use of the facilities for the duration of the event.
-        p Grand Prix heat stages allow every driver to start one race from each position in the grid.
+        p Our corporate Grand Prix offer the ultimate high-octane team-building experience, igniting competition and pitting your team head-to-head in a friendly environment. With access to catering and our corporate boardroom, Fast Lane is the perfect venue for your next corporate event. 
+        p Groups will have exclusive use of the facilities for the duration of the event. #[a(href='/contact' target='_blank') Call us today] to find out how we can cater for your company.
         p.no-margin.bold All Grand Prix Events Include:
         ul.race-packages__price-list--includes
           li Trophies for 1st, 2nd and 3rd place 
@@ -30,66 +30,36 @@ block content
         ul.race-packages__price-list--packages
           li
             div
-              h3 Grand Prix Sprint
-              p 4 Lap Practice Session
-              p 8 x 4 Lap Heats
-              p 4 Lap Semi-Final
-              p 8 Lap Final Race For Top 8 Drivers
+              h3 Grand Prix
+              p 6 Lap Practice Session
+              p 4 x 8 Lap Heats
+              p 8 Lap Semi-Final
+              p 10 Lap Final Race For Top 8 Drivers
             div
-              span £795
-              span 12-16 drivers
+              span £40/driver
+              span 13+ drivers
           li
             div
-              h3 Grand Prix Max
-              p 5 Lap Practice Session
-              p 8 x 5 Lap Heats
-              p 6 Lap Semi-Final
-              p 8 Lap Final Race For Top 16 Drivers
+              h3 Super Prix
+              p 8 Lap Practice Session
+              p 4 x 10 Lap Heats
+              p 10 Lap Semi-Final
+              p 12 Lap Final For Top 16 Drivers
             div
-              span £995
-              span 17-21 drivers
+              span £45/driver
+              span 16+ drivers
               
       .content-block
-        h2 Corporate Race Packages
+        h2 Bespoke Corporate Packages
         .red-highlight
-        p These events are set for medium/large groups intent on a good nights’ racing, and offer the ultimate karting experience. Groups will have exclusive use of the facilities for the duration of the event.
-        p.no-margin.bold All Corporate Race Packages Include:
+        p Our bespoke karting events are tailored to companies looking for the ultimate team-building experience.
+        p.no-margin.bold Our Corporate Facilities Include:
         ul.race-packages__price-list--includes
-          li Trophies for 1st, 2nd and 3rd place 
+          li Catering &amp; buffet options
           li Bottle of Moet for the winner
+          li Trophies for 1st, 2nd and 3rd place
+          li Boardroom positioned over the track
+          li Support for large groups of 30+ drivers
+          li Exclusive use of the facilities
         br
-        p Additional food and drinks can be added to any package.
-        ul.race-packages__price-list--packages
-          li
-            div
-              h3 Bronze Package
-              p 5 Lap Practice Session
-              p 8 x 5 Lap Heats Per Driver
-              p 6 Lap Semi-Final
-              p 8 Lap Final Race For Top 8 Drivers
-            div
-              span £1250
-              span 22-26 drivers
-          li
-            div
-              h3 Silver Package
-              p 5 Lap Practice Session
-              p 8 x 6 Lap Heats Per Driver
-              p 6 Lap Semi Final
-              p 8 Lap Grand Final For Top 8 Drivers
-              p 12 Months Advertising At Fast Lane
-            div
-              span £1500
-              span 25-30 drivers
-          li
-            div
-              h3 Gold Package
-              p 5 Lap Practice Session
-              p 8 x 6 Lap Heats Per Driver
-              p 8 Lap Semi Final
-              p 10 Lap Split Grand Finals For Top 16 Drivers
-              p 12 Months Advertising At Fast Lane
-              p Finger Buffet
-            div
-              span £2000
-              span 25-35 drivers
+        p #[a(href='/contact' target='_blank') Call us today] to find out how we can cater for your event.
