--- a/src/pug/corporate-events/index.pug
+++ b/src/pug/corporate-events/index.pug
@@ -14,14 +14,14 @@ block content
     .container
       h1.center Corporate Events
       .red-highlight.centered
-      p.center.race-packages__description If you’re planning a Corporate Event or Team-Building activity, it can be hard to know what to do! At Fastlane all of our Corporate Events are run on the 200cc karts which are changed regularly so you know your Customers or Staff are getting the best.
+      p.center.race-packages__description If you’re planning a Corporate Event or Team-Building activity, it can be hard to know what to do! At Fast Lane all of our Corporate Events are run on the 200cc karts which are changed regularly so you know your Customers or Staff are getting the best.
       p.center.race-packages__description #[span.bold.red PLEASE NOTE:] All drivers require a Balacalava for hygeine reasons. Feel free to bring your own, or we can supply them for £1.50 each.
 
     .container.race-packages__price-list
       .content-block
         h2 Corporate Grand Prix Events
         .red-highlight
-        p Our corporate Grand Prix offer the ultimate high-octane team-building experience, igniting competition and pitting your team head-to-head in a friendly environment. With access to catering and our corporate boardroom, Fast Lane is the perfect venue for your next corporate event. 
+        p Our corporate Grand Prix offers the ultimate high-octane team-building experience, igniting competition and pitting your team head-to-head in a friendly environment. With access to catering and our corporate boardroom, Fast Lane is the perfect venue for your next corporate event. 
         p Groups will have exclusive use of the facilities for the duration of the event. #[a(href='/contact' target='_blank') Call us today] to find out how we can cater for your company.
         p.no-margin.bold All Grand Prix Events Include:
         ul.race-packages__price-list--includes
