Minor text updates & new track layout

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -394,6 +394,11 @@
   padding .75rem 3rem
   margin 0 -3rem
 
+.track
+  
+  &__image
+    max-width 45%
+
 .fastest-lap
   margin-bottom 2rem
 
@@ -498,6 +503,8 @@
         max-width 60rem
         margin-bottom 4rem
 
+    &__image
+      max-width 80%
 
 @media(max-width: breakpointSmall)
 
@@ -516,6 +523,11 @@
       width 100%
       margin-bottom 2rem
   
+  .track
+
+    &__image
+      max-width 90%
+
   .social-feed-instagram
 
     &-post
