--- a/src/pug/live-timing/index.pug
+++ b/src/pug/live-timing/index.pug
@@ -12,4 +12,4 @@ block description
 block content
   section.black
     .container
-      iframe(src="https://flkstaffordshire.clubspeedtiming.com/cs-speedscreen/#/3" width="100%" height="768" frameborder="0" allowfullscreen="allowfullscreen")
+      iframe(src="http://flkstaffordshire.clubspeedtiming.com/cs-speedscreen/#/3" width="100%" height="768" frameborder="0" allowfullscreen="allowfullscreen")
