Added <meta> tag to force upgrade to https

--- a/src/pug/_partials/layout.pug
+++ b/src/pug/_partials/layout.pug
@@ -7,6 +7,7 @@ doctype html
 html
   head
     meta(name="author" content="AMP Studio | https://amp.studio")
+    meta(http-equiv="Content-Security-Policy" content="upgrade-insecure-requests")
 
     block title
       title Fast Lane Go Karting Stoke | The Midlands' #1 Indoor Karting Experience
@@ -20,7 +21,6 @@ html
     meta(property="og:image" content="https://fastlanekarting.amp.studio/images/home-categories/race-packages.jpg")
 
     //- Minimal favicon setup, covers most bases. 
-    //- Remember to change favicon.ico in root folder
     link(rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png")
     link(rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png")
     link(rel="icon" type="image/png" sizes="96x96" href="/images/favicon/favicon-96x96.png")
