--- a/src/pug/_partials/layout.pug
+++ b/src/pug/_partials/layout.pug
@@ -6,6 +6,30 @@ include amp
 doctype html
 html
   head
+    //- Google Analytics
+    script(async src="https://www.googletagmanager.com/gtag/js?id=UA-149781415-2")
+    script.
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-149781415-2');
+
+    //- Facebook Pixel
+    script.
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window,document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '2342639352664091'); 
+      fbq('track', 'PageView');
+
+    noscript
+      img(height="1" width="1" src="https://www.facebook.com/tr?id=2342639352664091&ev=PageView &noscript=1")
+
     meta(name="author" content="AMP Studio | https://amp.studio")
 
     //- Force insecure <iframe> requests to upgrade to https://
