--- a/src/pug/_partials/layout.pug
+++ b/src/pug/_partials/layout.pug
@@ -6,6 +6,8 @@ include amp
 doctype html
 html
   head
+    meta(http-equiv="Content-Type" content="text/html;charset=UTF-8")
+
     //- Google Analytics
     script(async src="https://www.googletagmanager.com/gtag/js?id=UA-149781415-2")
     script.
