Added corporate hospitality text

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -128,7 +128,15 @@
     align-items center
   
   h1
+    margin 0 0 1rem 0
+
+  h2
     margin 0 0 2rem 0
+    font-size 2.2rem
+    font-family sansSerif
+    letter-spacing normal
+    font-style italic
+    line-height 1.4
 
   .button__primary
     margin-right 2rem
@@ -493,7 +501,7 @@
     
     h1
       font-size 5rem
-      margin 0 0 2rem 0
+      margin 0 0 1rem 0
 
   .header-video__controls
       transform translateY(0)
