--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -26,6 +26,7 @@ block content
   section.black.main-title
     .container
       h1.center The midlands' #[span.red premiere] indoor karting experience
+      h2.center Specialists in Corporate Entertainment and Hospitality
       div
         a.button.button__primary(href='/contact') Book Now
         a.button.button__grey(href='/race-packages') Price List
@@ -61,6 +62,7 @@ block content
     .container.center
       h2 Corporate & Group Events
       .red-highlight.centered
+      p Corporate Hospitality at it’s finest.
       p When looking to book your next Event, look no further. Hosting your Corporate or Group Event at Fast Lane Karting will ensure a safe, friendly and exhilarating night's racing with on-site catering and Corporate Lounge.
       p.bold Run by professional people who care.
       a.button.button__primary(href='/corporate-events') View Prices
