--- a/src/css/_partials/nav.styl
+++ b/src/css/_partials/nav.styl
@@ -9,6 +9,27 @@ nav, .nav
     align-items stretch
     flex-wrap wrap
 
+  &__virus
+    background red
+    color white
+    
+    .container
+      display flex
+      justify-content center
+      align-items center
+
+      p 
+        margin 1rem 2rem 1rem 0
+
+        strong
+          font-size inherit
+
+      .button
+        border 2px solid white
+        background rgba(0,0,0,0.2)
+        color white
+        margin 1rem 0
+
   &__primary .container
     background url('/images/crossed-flags.png') no-repeat 55% 38%
 
