--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -7,6 +7,17 @@
 @import '_partials/nav'
 @import '_partials/forms'
 
+.virus
+
+  .container
+    display flex
+    flex-direction column
+    align-items center
+
+  &__text
+    margin-top 2rem
+    max-width 600px
+
 .header-video
   position relative
   width 100%
