--- a/src/pug/_partials/navigation.pug
+++ b/src/pug/_partials/navigation.pug
@@ -27,7 +27,7 @@ mixin navigation(currentPage = '/')
           .nav__right--contact--opening-hours
             .nav__right--contact--opening-hours--light
               span Open Now
-            span #[span.hide-mobile Open every day] 10:00am - 10:30pm
+            span TEMPORARILY CLOSED
         a.button.nav__right--book-now(href='/contact') Book Now
 
   nav.nav__secondary
@@ -36,3 +36,8 @@ mixin navigation(currentPage = '/')
         for url, title in navLinks      
           li(class=(currentPage == url ? 'active' : ''))
             a(href=url)= title
+
+  nav.nav__virus
+    .container
+      p.centered #[strong PLEASE NOTE:] We are temporarily closed due to the COVID-19 outbreak.
+      a.button(href='/coronavirus') Learn More
