Added terms and conditions

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -18,6 +18,16 @@
     margin-top 2rem
     max-width 600px
 
+    ol 
+      margin 2rem 0 4rem 0
+    
+      li
+        list-style-type number
+        margin-bottom 1rem
+
+    h3
+      margin-top 4rem  
+
 .header-video
   position relative
   width 100%
@@ -296,7 +306,6 @@
       font-size 1.6rem
       color white
       text-decoration underline
-      display block
 
       &:hover
         color primaryColor
