--- a/src/css/_partials/utilities.styl
+++ b/src/css/_partials/utilities.styl
@@ -43,7 +43,8 @@ section
   padding 0 !important
 
 .centered
-  margin 0 auto
+  margin-left auto
+  margin-right auto
   text-align center
 
 .center-content
