--- a/src/pug/arrive-and-drive/index.pug
+++ b/src/pug/arrive-and-drive/index.pug
@@ -16,39 +16,79 @@ block content
       .red-highlight.centered
       .arrive-and-drive__description
         div
-          p Arrive and Drive is for you to come and hone your skills in the Practice Lap Sessions. We can run children as low as 8 years old in the mid-week off peak times between 10.00am – 6.00pm, Monday – Friday. For drivers 12 plus you can go on the track at anytime as long as it is available but please book to avoid disappointment.
-          p Time limits do not apply during off-peak times.
-          p We have #[span.bold Junior Karting] for 8 – 13 year olds Saturday mornings at 9.00am or during the holiday periods at 10.00am. This is purely for this peer group, so please ring to book.
-          p Standard prices are on the 160cc karts but you can upgrade to the faster 200cc karts for an extra £5 each if you are 14+.
-          p #[span.bold.red PLEASE NOTE:] All drivers require a Balacalava for hygeine reasons. Feel free to bring your own, or we can supply them for £1.50 each.
-        .race-packages__price-list
-          .content-block
+          p Options available from £15 per driver*
+          p Arrive and Drive is for you to come and hone your skills in the Practice Lap Sessions. We can run children as low as 8 years old in the mid-week off peak times between 10.00am – 6.00pm, Monday – Friday. 
+          p For drivers 12 plus you can go on the track at anytime as long as it is available but please book to avoid disappointment.
+          p Time limits apply during our peak times and busy periods.
+        div
+          p We have #[span.bold Junior Karting] for 8 – 12 year olds Saturday mornings at 10.00am or during midweek from 10.00am. This is purely for this peer group, so please book in advance.
+          p #[span.bold.red PLEASE NOTE:] All drivers require a Balaclava and Gloves for hygiene reasons. Feel free to bring your own, or we can supply them for £2.00 per item.
+          p Standard 160cc adult karts are available for £5 less at selected times for 14yrs+.
+
+
+    .container.split-container
+      .split
+        .race-packages__price-list.full-width
+          .content-block          
+            h3 Junior and Family Open Karting
+            .red-highlight
             ul.race-packages__price-list--packages
               li
                 div
                   h3 20 lap practice
-                  p 20 Laps Non-Stop Session
+                  p 20 Laps (15 Minute) Non-Stop Session
                 div
-                  span £15/driver - 160CC
-                  span £20/driver - 200CC
+                  span £20/driver
+                  span Junior Racer & Adult SR4
               li
                 div
-                  h3 50 lap practice
-                  p 2 x 25 Lap (15 Minute) Sessions
+                  h3 40 lap practice
+                  p 2 x 20 Laps (15 Minute) Sessions
                 div
-                  span £25/driver - 160CC
-                  span £30/driver - 200CC
+                  span £30/driver
+                  span Junior Racer & Adult SR4
               li
                 div
-                  h3 75 lap practice
-                  p 3 x 25 Lap (15 Minute) Sessions
+                  h3 60 lap practice
+                  p 3 x 20 Laps (15 Minute) Sessions
+                  p Midweek Only
                 div
-                  span £30/driver - 160CC
-                  span £35/driver - 200CC
+                  span £35/driver
+                  span Junior Racer & Adult SR4
+
+      .split
+        .race-packages__price-list.full-width
+          .content-block
+            h3 Adult Open Karting
+            .red-highlight
+            ul.race-packages__price-list--packages
               li
                 div
-                  h3 100 lap practice
-                  p 4 x 25 Lap (15 Minute) Sessions
+                  h3 20 lap practice
+                  p 20 Laps (15 Minute) Non-Stop Session
                 div
-                  span £35/driver - 160CC
-                  span £40/driver - 200CC
+                  span £20/driver
+                  span Adult SR4 200cc
+              li
+                div
+                  h3 40 lap practice
+                  p 2 x 20 Laps (15 Minute) Sessions
+                div
+                  span £30/driver
+                  span Adult SR4 200cc
+              li
+                div
+                  h3 60 lap practice
+                  p 3 x 20 Laps (15 Minute) Sessions
+                div
+                  span £35/driver
+                  span Adult SR4 200cc
+              li
+                div
+                  h3 80 lap practice
+                  p 4 x 20 Laps (15 Minute) Sessions
+                div
+                  span £45/driver
+                  span Adult SR4 200cc
+
+            p Standard 160cc adult karts are available for £5 less at selected times for 14yrs+.
