--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -22,6 +22,9 @@ block content
             img(id='unmuted' src='/images/video-controls/unmuted.svg' alt='Mute Button')
           .header-video__controls--right--fullscreen
             img(id='fullscreen' src='/images/video-controls/fullscreen.svg' alt='Fullscreen Button')
+  .header-video__refurb(href="/layout" target="_blank")
+    .container 
+      a(href="/layout" target="_blank") We have now undergone a multilevel track refurbishment. Please click here to view.
 
   section.black.main-title
     .container
