--- a/src/pug/juniors-and-parties/index.pug
+++ b/src/pug/juniors-and-parties/index.pug
@@ -14,8 +14,8 @@ block content
     .container
       h1.center Juniors & Parties
       .red-highlight.centered
-      p.center.race-packages__description #[span.bold.red PLEASE NOTE:] All drivers require a Balacalava for hygeine reasons. Feel free to bring your own, or we can supply them for £1.50 each.
-
+      p.center.race-packages__description #[span.bold.red PLEASE NOTE:] All drivers require a Balaclava and Gloves for hygiene reasons. Feel free to bring your own, or we can supply them for £2.00 per item.
+      
     .container.race-packages__price-list
       .content-block
         h2 Kids' Birthday Parties
@@ -25,28 +25,36 @@ block content
         ul.race-packages__price-list--includes
           li 3 x 15 minutes racing sessions with all guests taking part in 2 sessions each, and a birthday person having a special treat and taking part in all 3 sessions.
           li Hot meal and squash in the private corporate room 
-          li Pizza, chicken nuggets, burger or hot dog with chips
+          li Pizza options
           li Orange/blackcurrant squash
           li Medal presentation plus a trophy for the birthday boy/girl
         ul.race-packages__price-list--packages
           li
             div
               h3 2 Hour Session with Food
-              p 45 Minutes Driving Time, 1 Hour Food & Medals
+              p 15 Minutes Pre-Session Preparation
+              p 45 Minutes Driving Time
+              p 1 Hour Food & Medals
             div
-              span £240
+              span £300
               span up to 8 drivers
+
+        p 11 driver, 16 driver, and 20 driver party packages also available. 
               
       .content-block
         h2 1 Hour Practice / Family Session
         .red-highlight
-        p Our 1 hour non-stop private sessions are perfect for parties and families looking for a great night out. This is a private party package for up to 8 drivers 8 years and older. 
+        p Maximum of 6 x Juniors (8 - 11 yrs) and 10 x Adult (12yrs+). Age ranges can mix to make use of full 10 places.
+        p Our 1 hour private hire session is perfect for parties and families looking for a great day or night out. This is a private party package for up to 10 drivers 8 years and older. Driving in our new Sodi Junior Racer and Adult SR4 200cc karts.
         p Includes printouts of lap times for all drivers. No food, trophies or medals are included but can they be purchased at extra cost.
+        p Clock up those laps and see who can get the best lap time. 
         ul.race-packages__price-list--packages
           li
             div
-              h3 1 Hour Session
-              p 1 Hour Non-Stop Race
+              h3 1 Hour Private Hire
+              p 25 Minute session
+              p 10 Minute break to compare and discuss lap times, racing lines and that all important pit stop to the loo
+              p 25 Minute Session
             div
               span £240
               span up to 8 drivers
