--- a/src/pug/race-packages/index.pug
+++ b/src/pug/race-packages/index.pug
@@ -17,56 +17,13 @@ block content
       p.center.race-packages__description #[span.bold.red PLEASE NOTE:] All drivers require a Balacalava for hygeine reasons. Feel free to bring your own, or we can supply them for £1.50 each.
 
     .container.race-packages__price-list
-      .content-block
-        h2 Endurance Events
-        .red-highlight
-        p Endurance racing is a fantastic team building or stag & hen party event. It is a multi lap event which can be run as individuals or teams. These events are run on our 200cc corporate karts. They start with the Dash 30 minute Race going up to the 60 minute Super Challenge race.
-        p.no-margin.bold All Endurance Events Include:
-        ul.race-packages__price-list--includes
-          li Use of the Corporate racewear
-          li 5 Lap practice/qualifying session
-          li Full race report including overall results and individual reports
-          li Trophies for 1st, 2nd and 3rd place 
-          li Bottle of bubbly for the winner
-        ul.race-packages__price-list--packages
-          li
-            div
-              h3 Dash
-              p 30 Minute Non-Stop Race
-            div
-              span £32.50 per driver
-              span 8-10 drivers
-          li
-            div
-              h3 Dash Plus
-              p 40 Minute Non-Stop Race
-            div
-              span £37.50 per driver
-              span 8-10 drivers
-          li
-            div
-              h3 Challenge
-              p 50 Minutes Non-Stop or 2 x 25 Minute Races
-            div
-              span £42.50 per driver
-              span 8-10 drivers
-          li
-            div
-              h3 Super Challenge
-              p 60 Minutes Non-Stop or 2 x 30 Minute Races
-            div
-              span £47.50 per driver
-              span 8-10 drivers
-          li
-            div
-              h3 Double Endurance Races
-              p If you have 16 or more drivers, why not double up any of the above packages? Race in teams of two for double the overall time, at the same cost per driver!
-              
+    
       .content-block
         h2 Grand Prix Events
         .red-highlight
-        p This event is set for medium/large groups intent on a good nights’ racing, and offers the ultimate karting experience. Groups will have exclusive use of the facilities for the duration of the event.
-        p Grand Prix heat stages allow every driver to start one race from each position in the grid.
+        p This event is set for medium/large groups intent on a good night's racing, and offers the ultimate karting experience. Groups will have exclusive use of the track for the duration of the event.
+        p Grand Prix heats allow every driver to start from different positions in the grid, positions are all worked out by our computer so that it's as fair as possible across the event.      
+
         p.no-margin.bold All Grand Prix Events Include:
         ul.race-packages__price-list--includes
           li Trophies for 1st, 2nd and 3rd place
@@ -79,15 +36,87 @@ block content
               p 6 x 6 Lap Heats Per Driver
               p 8 Lap Final Race For Top 8 Drivers
             div
-              span £37.50 per driver
+              span £40 per driver
               span 13+ drivers
           li
             div
-              h3 Super Prix
-              p 6 Lap Practice Session
+              h3 Ultimate Super Grand Prix
+              p 5 Lap Practice Session
               p 6 x 6 Lap Heats Per Driver
-              p 8 Lap Semi Final For All Drivers
-              p 8 Lap Grand Final For Top 16 Drivers
+              p 8 Lap Semi Final For Top 16 Drivers
+              p 10 Lap Grand Final For Top  Drivers
             div
-              span £42.50 per driver
+              span £45 per driver
               span 13+ drivers
+
+      .content-block
+        h2 Team Challenge Events
+        .red-highlight
+        p All the thrills of our Individual events only in team format. Bring tactics into play with driver changes and pit stops at the best possible times and your team may just get the win.
+        ul.race-packages__price-list--packages
+          li
+            div
+              h3 Team Challenge 90
+              p 30 Minute combined Practice & Qualifying Session
+              p 60 Minute Non-Stop Race with Driver Changes Throughout
+            div
+              span £100 per Team
+              span 2/3 Drivers per Team
+          li
+            div
+              h3 Team Challenge 120
+              p 30 Minute combined Practice & Qualifying Session
+              p 90 Minute Non-Stop Race with Driver Changes Throughout
+            div
+              span £125 per Team
+              span 3 Drivers per Team
+          li
+            div
+              h3 Team Challenge 150
+              p 30 Minute combined Practice & Qualifying Session
+              p 120 Minute Non-Stop Race with Driver Changes Throughout
+            div
+              span £150 per Team
+              span 3/4 Drivers per Team
+              
+      .content-block
+        h2 Endurance Events
+        .red-highlight
+        p Endurance racing is a fantastic team building or stag & hen party event. It is a multi lap event which can be run as individuals or teams. These events are run on our 200cc Sodi SR4 karts. They start with the Dash 30 minute Race Event going up to the 60 minute Super Challenge race for individuals, or for the Team Challenge Races we have 90 (1.5 Hours) - 150 Minute (2.5 Hours) Events.
+
+        p.no-margin.bold All Endurance Events Include:
+        ul.race-packages__price-list--includes
+          li Use of the Corporate racewear
+          li 15 minute combined practice/qualifying session
+          li Races of either 15 minutes, 2 x 15 minutes, or 3 x 15 minutes
+          li Full race report including overall results and individual reports 
+          li Trophies for 1st, 2nd and 3rd place 
+        ul.race-packages__price-list--packages
+          li
+            div
+              h3 Dash 30
+              p 15 Minute Practice/Qualifying Session
+              p 15 Minute Break to Discuss and Hone your Racing Lines
+              p 15 Minute Practice/Qualifying Session
+            div
+              span £35.00 per driver
+              span 8-10 drivers
+          li
+            div
+              h3 Challenge 45
+              p 15 Minute Practice/Qualifying Session
+              p 15 Minute Break
+              p 2 x 15 Minute Races with 15 Minute Breaks between
+            div
+              span £45.00 per driver
+              span 8-10 drivers
+          li
+            div
+              h3 Super Challenge 60
+              p 15 Minute Practice/Qualifying Session
+              p 15 Minute Break
+              p 3 x 15 Minute Races with 15 Minute Breaks between
+            div
+              span £55.00 per driver
+              span 8-10 drivers
+              
