--- a/src/css/_partials/utilities.styl
+++ b/src/css/_partials/utilities.styl
@@ -65,14 +65,20 @@ section
     display flex
     align-items center
 
+.split__container
+  display flex
+  align-items flex-start
+  justify-content space-between
+  flex-wrap wrap
+
 .split
-  width 50%
+  width calc(50% - 2rem)
 
   &-3
-    width 33.333%
+    width calc(33.333% - 2rem)
 
   &-4
-    width 25%
+    width calc(25% - 2rem)
 
   &-container
     display flex
