--- a/src/pug/corporate-events/index.pug
+++ b/src/pug/corporate-events/index.pug
@@ -15,7 +15,7 @@ block content
       h1.center Corporate Events
       .red-highlight.centered
       p.center.race-packages__description If you’re planning a Corporate Event or Team-Building activity, it can be hard to know what to do! At Fast Lane all of our Corporate Events are run on the 200cc karts which are changed regularly so you know your Customers or Staff are getting the best.
-      p.center.race-packages__description #[span.bold.red PLEASE NOTE:] All drivers require a Balacalava for hygeine reasons. Feel free to bring your own, or we can supply them for £1.50 each.
+      p.center.race-packages__description #[span.bold.red PLEASE NOTE:] All drivers require a Balaclava and Gloves for hygiene reasons. Feel free to bring your own, or we can supply them for £2.00 per item.
 
     .container.race-packages__price-list
       .content-block
@@ -23,7 +23,7 @@ block content
         .red-highlight        
         p Corporate Hospitality at it’s finest.
         p Our corporate Grand Prix offers the ultimate high-octane team-building experience, igniting competition and pitting your team head-to-head in a friendly environment. With access to catering and our corporate boardroom, Fast Lane is the perfect venue for your next corporate event. 
-        p Groups will have exclusive use of the facilities for the duration of the event. #[a(href='/contact' target='_blank') Call us today] to find out how we can cater for your company.
+        p Groups will have exclusive use of the facilities for the duration of the event. If you would like exclusive use of the facility and corporate room then #[a(href='/contact' target='_blank') Call us today] to find out how we can cater for your company. 
         p.no-margin.bold All Grand Prix Events Include:
         ul.race-packages__price-list--includes
           li Trophies for 1st, 2nd and 3rd place
@@ -37,8 +37,8 @@ block content
               p 8 Lap Semi-Final
               p 10 Lap Final Race For Top 8 Drivers
             div
-              span £40/driver
-              span 13+ drivers
+              span £45/driver
+              span 16+ drivers
           li
             div
               h3 Super Prix
@@ -47,8 +47,9 @@ block content
               p 10 Lap Semi-Final
               p 12 Lap Final For Top 16 Drivers
             div
-              span £45/driver
+              span £50/driver
               span 16+ drivers
+        p Corporate bookings are subject to VAT at the current rate.
               
       .content-block
         h2 Bespoke Corporate Packages
