--- a/src/pug/layout/index.pug
+++ b/src/pug/layout/index.pug
@@ -10,11 +10,11 @@ block description
   meta(name="description" content="The best indoor go karting venue in Stoke-on-Trent for 25 years. High performance Sodi SR4 sprint karts, kids karts and on-site catering. Arrive & Drive today!")
 
 block content
-  section.grey.track
+  section.black.track
     .container
       h1.center Track Layout
       .red-highlight.centered
-      .container.race-packages__price-list
+      .race-packages__price-list
         .content-block
           h2 The Midlands' Best Karting Track
           .red-highlight
@@ -25,8 +25,16 @@ block content
 
           .red-strip All-time fastest lap
           .fastest-lap
-            span 22.628
-            span Evan Pettitt & Adam Brittain
+            span 28.231
+            span Tom Lomas
           
         .track__image
-          img(src='/images/track-layout/track-layout.png')
+          img(src='/images/track-layout/track-layout-2021.jpg')
+
+      h2.center 3D Track Tour
+      .red-highlight.centered
+      iframe.track__matterport(src='https://my.360picture.uk/tour/fastlane-karting' height='600' width='100%' allowfullscreen)
+
+      h2.center Onboard Video
+      .red-highlight.centered
+      video.track__onboard(src="/video/track-layout.mp4" poster="/video/track-layout-poster.jpg" controls)
