Minor text amends

--- a/src/pug/juniors-and-parties/index.pug
+++ b/src/pug/juniors-and-parties/index.pug
@@ -44,7 +44,7 @@ block content
       .content-block
         h2 1 Hour Practice / Family Session
         .red-highlight
-        p Maximum of 6 x Juniors (8 - 11 yrs) and 10 x Adult (12yrs+). Age ranges can mix to make use of full 10 places.
+        p Maximum of 6 x Juniors (8 - 11 yrs) or 10 x Adult (12yrs+). Age ranges can mix to make use of full 10 places.
         p Our 1 hour private hire session is perfect for parties and families looking for a great day or night out. This is a private party package for up to 10 drivers 8 years and older. Driving in our new Sodi Junior Racer and Adult SR4 200cc karts.
         p Includes printouts of lap times for all drivers. No food, trophies or medals are included but can they be purchased at extra cost.
         p Clock up those laps and see who can get the best lap time. 
@@ -56,5 +56,5 @@ block content
               p 10 Minute break to compare and discuss lap times, racing lines and that all important pit stop to the loo
               p 25 Minute Session
             div
-              span £240
-              span up to 8 drivers
+              span £400
+              span up to 10 drivers
