--- a/src/pug/race-packages/index.pug
+++ b/src/pug/race-packages/index.pug
@@ -14,7 +14,7 @@ block content
     .container
       h1.center Race Packages
       .red-highlight.centered
-      p.center.race-packages__description #[span.bold.red PLEASE NOTE:] All drivers require a Balacalava for hygeine reasons. Feel free to bring your own, or we can supply them for £1.50 each.
+      p.center.race-packages__description #[span.bold.red PLEASE NOTE:] All drivers require a Balaclava and Gloves for hygiene reasons. Feel free to bring your own, or we can supply them for £2.00 per item.
 
     .container.race-packages__price-list
     
