--- a/src/pug/layout/index.pug
+++ b/src/pug/layout/index.pug
@@ -1,5 +1,9 @@
 extends ../_partials/layout
 
+block pageScripts
+  script
+    include ../../../dist/js/fastestLap.js
+
 block nav
   +navigation('/layout')
 
@@ -18,22 +22,22 @@ block content
         .content-block
           h2 The Midlands' Best Karting Track
           .red-highlight
-          p Experience the exhilarating rush of driving on the Midlands’ best karting circuit! Three intense hairpins will challenge drivers of any skill level and  competition for the outright fastest lap is fierce.
-          p Try our powerful 200cc Sodi SR4 karts for high-octane thrills and competition or our standard 160cc karts for an exciting driving experience.
+          p Experience the exhilarating rush of driving on the Midlands’ best karting circuit! The track has been completely overhauled and we now have a New Multi Level Circuit with super smooth ramps for a seamless transition between levels. We've kept it fast, flowing, and even thrown in a few little technical bits to test the skills of even the best drivers. Competition for the outright fastest lap will be fierce.
+          p Adults get to drive our powerful 200cc Sodi SR4 karts for high-octane thrills and competition. For the younger drivers, our new Junior Racer karts are the perfect choice to hone their skills before progressing up to the adult category.
           p Our on-site kitchen provides food and drinks throughout the day, and our corporate lounge overlooking the track is perfect for parties looking for a VIP experience.
           p Think you’ve got what it takes to be the best? Have a go at our fastest lap and claim the top of the leaderboard for yourself!
 
           .red-strip All-time fastest lap
           .fastest-lap
-            span 28.231
-            span Tom Lomas
+            span.fastest-lap__lap-time 28.231
+            span.fastest-lap__name Tom Lomas
           
         .track__image
           img(src='/images/track-layout/track-layout-2021.jpg')
 
-      h2.center 3D Track Tour
-      .red-highlight.centered
-      iframe.track__matterport(src='https://my.360picture.uk/tour/fastlane-karting' height='600' width='100%' allowfullscreen)
+      //- h2.center 3D Track Tour
+      //- .red-highlight.centered
+      //- iframe.track__matterport(src='https://my.360picture.uk/tour/fastlane-karting' height='600' width='100%' allowfullscreen)
 
       h2.center Onboard Video
       .red-highlight.centered
