Re-added 3D view

--- a/src/pug/layout/index.pug
+++ b/src/pug/layout/index.pug
@@ -35,9 +35,9 @@ block content
         .track__image
           img(src='/images/track-layout/track-layout-2021.jpg')
 
-      //- h2.center 3D Track Tour
-      //- .red-highlight.centered
-      //- iframe.track__matterport(src='https://my.360picture.uk/tour/fastlane-karting' height='600' width='100%' allowfullscreen)
+      h2.center 3D Track Tour
+      .red-highlight.centered
+      iframe.track__matterport(src='https://my.360picture.uk/tour/fastlane-karting' height='600' width='100%' allowfullscreen)
 
       h2.center Onboard Video
       .red-highlight.centered
