Added Loading message

--- a/src/pug/layout/index.pug
+++ b/src/pug/layout/index.pug
@@ -29,8 +29,8 @@ block content
 
           .red-strip All-time fastest lap
           .fastest-lap
-            span.fastest-lap__lap-time 28.231
-            span.fastest-lap__name Tom Lomas
+            span.fastest-lap__lap-time -
+            span.fastest-lap__name Loading...
           
         .track__image
           img(src='/images/track-layout/track-layout-2021.jpg')
